Adding all my files

--- a/app/src/main/res/layout/activity_add_language.xml
+++ b/app/src/main/res/layout/activity_add_language.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,37 +21,38 @@
             android:contentDescription="@string/back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
             android:id="@+id/tvHeaderTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Add Language"
             android:textColor="@color/primary_blue"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:gravity="center"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Display user's current language -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp">
 
         <ImageView
             android:id="@+id/currentLanguageLogoImageView"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/html_icon"
-            android:contentDescription="Current Language Logo" />
+            android:src="@drawable/code_icon2"
+            android:contentDescription="Current Language Logo"/>
 
         <TextView
             android:id="@+id/currentLanguageTextView"
@@ -58,14 +60,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Current Language: Java"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
+
     </LinearLayout>
 
     <Spinner
         android:id="@+id/languageSpinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp" />
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/addLanguageButton"
@@ -73,5 +75,6 @@
         android:layout_height="wrap_content"
         android:text="ADD LANGUAGE"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="24dp"/>
+
 </LinearLayout>
