--- a/app/src/main/res/layout/activity_language_selection.xml
+++ b/app/src/main/res/layout/activity_language_selection.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/java_icon"
             android:text="Java"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/rounded_button_dark"
             android:layout_marginBottom="10dp"
             android:padding="16dp"
             android:gravity="start|center_vertical"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/javascript_icon"
             android:text="JavaScript"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/rounded_button_dark"
             android:layout_marginBottom="10dp"
             android:padding="16dp"
             android:gravity="start|center_vertical"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/python_icon"
             android:text="Python"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/rounded_button_dark"
             android:layout_marginBottom="10dp"
             android:padding="16dp"
             android:gravity="start|center_vertical"
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/html_icon"
             android:text="HTML"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/rounded_button_dark"
             android:layout_marginBottom="10dp"
             android:padding="16dp"
             android:gravity="start|center_vertical"
