--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -136,7 +136,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SAVE CHANGES"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/rounded_button_dark"
         android:textColor="@color/white"
         android:padding="16dp"
         android:textSize="18sp" />
