--- a/app/src/main/res/layout/activity_change_language.xml
+++ b/app/src/main/res/layout/activity_change_language.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
@@ -16,11 +18,11 @@
             android:id="@+id/btnBack"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:contentDescription="@string/back"
             android:src="@drawable/back"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/back"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
             android:id="@+id/tvHeaderTitle"
@@ -31,10 +33,11 @@
             android:textColor="@color/primary_blue"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
@@ -42,14 +45,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp">
 
         <ImageView
             android:id="@+id/currentLanguageLogoImageView"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/html_icon"
-            android:contentDescription="Current Language Logo" />
+            android:src="@drawable/code_icon2"
+            android:contentDescription="Current Language Logo"/>
 
         <TextView
             android:id="@+id/currentLanguageTextView"
@@ -57,13 +61,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Current Language: Java"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
+
     </LinearLayout>
 
     <Spinner
         android:id="@+id/languageSpinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/changeLanguageButton"
@@ -71,9 +76,6 @@
         android:layout_height="wrap_content"
         android:text="CHANGE LANGUAGE"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="24dp"/>
+
 </LinearLayout>
-
-
-
-
