--- a/app/src/main/res/layout/activity_lesson.xml
+++ b/app/src/main/res/layout/activity_lesson.xml
@@ -6,14 +6,12 @@
     android:orientation="vertical"
     android:background="@color/light_gray">
 
-    <!-- Top Bar with Back Arrow and Chapter Title -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/secondary_blue"
         android:padding="12dp">
 
-        <!-- Back Arrow -->
         <ImageView
             android:id="@+id/btnBack"
             android:layout_width="32dp"
@@ -23,7 +21,6 @@
             android:src="@drawable/back_icon"
             android:contentDescription="@string/back" />
 
-        <!-- Chapter Title -->
         <TextView
             android:id="@+id/tvChapterTitle"
             android:layout_width="wrap_content"
@@ -40,7 +37,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:paddingTop="16dp"/>
+        android:clipToPadding="false"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="16dp"
+        android:overScrollMode="never"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -75,7 +76,6 @@
             android:id="@+id/btnProfile"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/profile"
-            android:layout_marginEnd="40dp"/>
+            android:src="@drawable/profile"/>
     </LinearLayout>
 </LinearLayout>
