--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:textSize="18sp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/rounded_button_dark"
         android:textColor="@color/white"
         android:layout_marginBottom="16dp" />
 
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:text="Create Account"
         android:textSize="18sp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/rounded_button_dark"
         android:textColor="@color/white"
         android:layout_marginBottom="16dp" />
 
