--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,15 +7,12 @@
     android:padding="16dp"
     android:background="@color/background_light_blue">
 
-    <ImageButton
-        android:id="@+id/btn_back"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/backicon2"
-        android:background="@null"
-        android:contentDescription="Back Button"
-        android:layout_gravity="start"
-        app:tint="@color/primary_blue" />
+    <ImageView
+        android:id="@+id/btnBack"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/back"
+        android:contentDescription="@string/back" />
 
     <TextView
         android:layout_width="match_parent"
@@ -89,7 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="VIEW COURSES"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/rounded_button_dark"
         android:textColor="@color/white"
         android:padding="12dp"
         android:textSize="18sp"
@@ -100,7 +97,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DELETE ACCOUNT"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/rounded_button_dark"
         android:textColor="@color/white"
         android:padding="12dp"
         android:textSize="18sp"
@@ -111,7 +108,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SIGN OUT"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/rounded_button_dark"
         android:textColor="@color/white"
         android:padding="12dp"
         android:textSize="18sp" />
